--- a/index.html
+++ b/index.html
@@ -165,11 +165,61 @@
     </section>
     <section id="team" class="team">
         <div class="team-content">
-            <h1>My Team
-            </h1>
+            <h1>My Team</h1>
+            <div class="my-team">
+                <div class="team-list">
+                    <div class="team-pic">
+                        <img src="assets/img/foto6.jpg" alt="">
+                    </div>
+                    <div class="team-desc">
+                        <h3>Robert Evan</h3>
+                        <p>Backend</p>
+                    </div>
+                </div>
+                <div class="team-list">
+                    <div class="team-pic">
+                        <img src="assets/img/foto6.jpg" alt="">
+                    </div>
+                    <div class="team-desc">
+                        <h3>Robert Evan</h3>
+                        <p>Backend</p>
+                    </div>
+                </div>
+                <div class="team-list">
+                    <div class="team-pic">
+                        <img src="assets/img/foto6.jpg" alt="">
+                    </div>
+                    <div class="team-desc">
+                        <h3>Robert Evan</h3>
+                        <p>Backend</p>
+                    </div>
+                </div>
+            </div>
         </div>
-
     </section>
+    <section id="contact" class="contact">
+        <div class="contact-content">
+            <h1>Contact Me</h1>
+            <div class="form-contact">
+                <label for="name">Name</label>
+                <input type="text" name="name" id="name">
+            </div>
+            <div class="form-contact">
+                <label for="email">Name</label>
+                <input type="email" name="email" id="email">
+            </div>
+            <div class="form-contact">
+                <label for="subject">Subject</label>
+                <input type="text" name="subject" id="subject">
+            </div>
+            <div class="form-contact">
+                <label for="message">Message</label>
+                <textarea name="message" id="message" cols="0" rows="3"></textarea>
+            </div>
+
+        </div>
+    </section>
+    
 
 
 
