--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 <input type="text" name="name" id="name">
             </div>
             <div class="form-contact">
-                <label for="email">Name</label>
+                <label for="email">Email</label>
                 <input type="email" name="email" id="email">
             </div>
             <div class="form-contact">
@@ -219,6 +219,12 @@
 
         </div>
     </section>
+
+    <footer>
+        <div class="footer">
+            <h3>©2021 All Right Reserved - <span>Designed by Ilham Hatake</span></h3>
+        </div>
+    </footer>
     
 
 
@@ -229,6 +235,7 @@
             x.classList.toggle("show-menu");
         }
     </script>
+    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
